Fix small phones overflow

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -6,7 +6,7 @@
         padding: 25px;
         min-height: 160px;
         background-color: var(--mainColor);
-        box-shadow: 0px 9px 20px 0px rgb(0 0 0 / 40%);
+        box-shadow: 0 9px 20px 0 rgb(0 0 0 / 40%);
         &:after {
             content: "";
             position: absolute;
@@ -96,7 +96,7 @@
         flex-direction: column;
         line-height: 1;
         &-number {
-            font-size: 50px;
+            font-size: 38px;
             margin-bottom: 5px;
         }
         &-label {
@@ -128,7 +128,7 @@
             color: white;
             padding: 20px;
             background: #686767;
-            margin: 0px 10px;
+            margin: 0 10px;
             border-radius: 0 0 5px 5px;
             display: flex;
             flex-wrap: wrap;
@@ -191,7 +191,7 @@
     &.card-dark{
         color: white;
         .techNumber{
-            -webkit-text-stroke: white;
+            -webkit-text-stroke: thin white;
         }
     }
     .notAvailable {
